# Solvent

./: .gitignore  CHEATSHEET.md  README.md
circuits/: input.json  input_large.json  solvency.circom
contracts/solvent/: Cargo.toml
contracts/solvent/src/: lib.rs  test.rs
deploy/: DEMO_SCRIPT.md  DEPLOYMENT.md  deploy_insolvent.sh  deploy_testnet.sh
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AlertsFeed.tsx  CustomerCheck.tsx  FraudDemo.tsx  Leaderboard.tsx  LiveStatus.tsx  ZkPipeline.tsx
frontend/app/lib/: stellar.ts
scripts/: gen_proof.sh
tools/convert/: Cargo.toml
tools/convert/src/: main.rs
