[package]
name = "solvent"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "25.1.0" }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }
hex = "0.4"

[profile.dev]
# The build host is memory-constrained; full debuginfo OOM-kills rustc on the
# large stellar-xdr/soroban-env crates. Tests don't need it.
debug = 0

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
